<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".StoreClerkHomeActivity">


    <LinearLayout
        android:id="@+id/topRow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@id/bottomRow"
        app:layout_constraintHeight_percent="0.1"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:orientation="horizontal"
            android:background="@color/blue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/DisbursementList"
                android:textColor="@color/black" />
            <Button
                android:id="@+id/LogoutStoreHome"
                android:text="@string/Logout"
                android:textColor="@color/black"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>
        <TextView
            android:text="Collection Point"
            android:gravity="center"
            android:textColor="@color/black"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/bottomRow"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHeight_percent="0.9"
        app:layout_constraintTop_toBottomOf="@id/topRow">

        <LinearLayout
            android:layout_weight="1"
            android:orientation="horizontal"
            android:background="@color/blueN1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"

                android:gravity="center"
                android:text="@string/Stationery"
                android:textColor="@color/black" />
            <LinearLayout
                android:layout_weight="2"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <Button
                    android:id="@+id/contactStationery"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:textColor="@color/black"
                    android:text="contacts" />
                <Button
                    android:id="@+id/disburseStationery"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:textColor="@color/black"
                    android:text="@string/Disbursement" />
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_weight="1"
            android:orientation="horizontal"
            android:background="@color/blueN1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"

                android:gravity="center"
                android:text="@string/Management"
                android:textColor="@color/black" />
            <LinearLayout
                android:layout_weight="2"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <Button
                    android:id="@+id/contactManagement"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:textColor="@color/black"
                    android:text="contacts" />
                <Button
                    android:id="@+id/disburseManagement"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:textColor="@color/black"
                    android:text="@string/Disbursement" />
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_weight="1"
            android:orientation="horizontal"
            android:background="@color/blueN1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"

                android:gravity="center"
                android:text="@string/Medical"
                android:textColor="@color/black" />
            <LinearLayout
                android:layout_weight="2"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <Button
                    android:id="@+id/contactMedical"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:textColor="@color/black"
                    android:text="contacts" />
                <Button
                    android:id="@+id/disburseMedical"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:textColor="@color/black"
                    android:text="@string/Disbursement" />
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_weight="1"
            android:orientation="horizontal"
            android:background="@color/blueN1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"

                android:gravity="center"
                android:text="@string/Engineering"
                android:textColor="@color/black" />
            <LinearLayout
                android:layout_weight="2"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <Button
                    android:id="@+id/contactEngineering"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:textColor="@color/black"
                    android:text="contacts" />
                <Button
                    android:id="@+id/disburseEngineering"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:textColor="@color/black"
                    android:text="@string/Disbursement" />
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_weight="1"
            android:orientation="horizontal"
            android:background="@color/blueN1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"

                android:gravity="center"
                android:text="@string/Science"
                android:textColor="@color/black" />
            <LinearLayout
                android:layout_weight="2"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <Button
                    android:id="@+id/contactScience"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:textColor="@color/black"
                    android:text="contacts" />
                <Button
                    android:id="@+id/disburseScience"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:textColor="@color/black"
                    android:text="@string/Disbursement" />
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_weight="1"
            android:orientation="horizontal"
            android:background="@color/blueN1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"

                android:gravity="center"
                android:text="@string/University"
                android:textColor="@color/black" />
            <LinearLayout
                android:layout_weight="2"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <Button
                    android:id="@+id/contactUniversity"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:textColor="@color/black"
                    android:text="contacts" />
                <Button
                    android:id="@+id/disburseUniversity"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:textColor="@color/black"
                    android:text="@string/Disbursement" />
            </LinearLayout>
        </LinearLayout>


    </LinearLayout>
</LinearLayout>